# vectra

./: .gitignore  README.md  main.py  pyproject.toml
cli/: config.py  main.py  model.py  utils.py
cli/commands/: pull.py  registry.py  run.py
core/: model_manager.py  runner.py
server/: main.py
